corpus/cpp/access_control/case-01/snapshots/gcc15_plus/dual_sink_structured/render.verbose.txt
error: [unavailable_api] access to private or protected member @ src/main.cpp:8:20
help: use a public interface, add a friend declaration, or change access specifier
name: int Counter::value
use : return counter.value;
from: src/main.cpp:3:9 int value = 1;
| src/main.cpp:8:20
|     return counter.value;
|                    ^
debug: rule_id=rule.family.access_control.message_terms
debug: matched_conditions=message_contains=is private within this context, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output